# tgllfg

./: .env.template  .gitignore  .markdownlint.json  CLAUDE.md  Dockerfile.tlbe  Dockerfile.tlfe  LICENSE.txt  README.md  alembic.ini  compose.yaml  openapi.json  pyproject.toml
.github/workflows/: audit.yml  markdownlint.yml  tlbe.yml  tlfe.yml
alembic/: env.py
alembic/versions/: 0001_baseline.py  0002_paradigm_cell.py  0003_lemma_sandhi_flags.py  0004_lemma_sense.py  0005_lex_entry_to_lemma_sense.py
data/tgl/: adj_paradigms.yaml  adjectives.yaml  affixes.yaml  clitic_order.yaml  clitics.yaml  nouns.yaml  numerals.yaml  paradigms.yaml  particles.yaml  pronouns.yaml  roots.yaml  sandhi.yaml  verbs.yaml  voice_aliases.yaml
deploy/keycloak/: tgllfg-realm.json
deploy/observability/: config.alloy  loki.yaml  prometheus.yml  tempo.yaml
deploy/postgres/: init-keycloak-db.sql
docs/: analysis-choices.md  coverage-audit-2026-05-post-phase8.md  coverage-audit-2026-05.md  coverage-audit-9u-long-sentence-diagnostic.md  coverage-audit-9x-pre-2.md  coverage-audit-9x-pre-3.md  coverage-audit-9x-pre-4.md  coverage-audit-9x-pre1.md  coverage.md  definitions.md  diagnostics.md  feats-binary-audit.md  fu-evaluation.md  fu-extension-audit.md  lex-yaml-schema.md  lexicon.md  lmt.md  phase-10-j-post-8-survey.md  refactor-grammar-and-roots.md  refactor-grammar-package.md  root-yaml-metadata.md
scripts/: audit_corpus.py  audit_diff.py  check_parses_unchanged.py  generate_audit_regression_fixture.py  generate_coverage_corpus.py  harvest_exemplars.py  oov_hit_list.py
src/tgllfg/: __about__.py  __init__.py  __version__.py  cfg.py  cli.py  clitics.py  common.py  earley.py  fgraph.py  fs_checks.py  grammar.py  lexicon.py  lmt.py  morph.py  pipeline.py  renderers.py  tokenizer.py  unify.py
tests/tgllfg/: conftest.py  test_advp_pp_ay_fronting.py  test_applicative_causative_phase4.py  test_approximators.py  test_arithmetic_predicates.py  test_aspect_mood_polarity_phase4.py  test_atomic_unify.py  test_audit.py  test_audit_regression_fixture.py  test_cardinal_compound.py  test_cardinal_decimal_percent.py  test_cardinal_multiplicative.py  test_cardinal_np_modifier.py  test_cardinal_predicative.py  test_cardinal_spanish.py  test_cfg.py  test_clitics_phase4.py  test_clock_times.py  test_collective_numerals.py  test_comparative_parang.py  test_control_ov_dv_complements.py  test_control_phase4.py  test_coverage_phase4.py  test_dates.py  test_dem_on_relativized_head.py  test_demonstrative_possessive_phase4.py  test_digit_tokenization.py  test_distributive.py  test_distributive_possessive.py  test_dual.py  test_dv_three_arg.py  test_earley.py  test_equations.py  test_fractions.py  test_fu_evaluation.py  test_headless_relatives.py  test_huwag_clause_mood.py  test_hyphen_compounds.py  test_ipang_ika_applicatives.py  test_iv_multi_gen_under_control.py  (+316 more)
tlbe/: .dockerignore  .gitignore  .yamllint  README.md  pyproject.toml
tlbe/alembic/: env.py
tlbe/alembic/versions/: 0001_baseline.py  0002_paradigm_cell.py  0004_lemma_sense.py  0005_lex_entry_to_lemma_sense.py
tlbe/data/tgl/: adjectives.yaml  clitics.yaml  mwe.yaml  nouns.yaml  paradigms.yaml  particles.yaml  pronouns.yaml
tlbe/data/tgl/exemplars/: unattributed-constructions.jsonl  wave1-exemplars.jsonl  wave1-rb86-verbs.jsonl  wave2-rc1990.jsonl  wave2-rg-intermediate.jsonl  wave3-so1972.jsonl  wave4-kroeger1991.jsonl  wave5-zamar2023.jsonl
tlbe/data/tgl/lexicon/: plain_transitive.yaml
tlbe/docs/: analysis-choices.md  architecture.md  coverage.md  definitions.md  feats-binary-audit.md  fu-evaluation.md  fu-extension-audit.md  grammar.md  lexicon.md  lmt.md
tlbe/scripts/: audit_corpus.py  check_parses_unchanged.py  generate_coverage_corpus.py  harvest_exemplars.py  oov_hit_list.py
tlbe/src/tgllfg/: __version__.py
tlbe/src/tgllfg/api/: __init__.py  app.py  auth.py  deps.py  health.py  openapi.py  settings.py  telemetry.py
tlbe/src/tgllfg/api/v1/: __init__.py  audit.py  exemplars.py  lex.py  parse.py  router.py
tlbe/src/tgllfg/bench/: __init__.py  baseline.json  inputs.py  runner.py
tlbe/src/tgllfg/cfg/: _helpers.py  clause.py  clitic.py  extraction.py  grammar.py  nominal.py
tlbe/src/tgllfg/cli/: main.py
tlbe/src/tgllfg/clitics/: placement.py
tlbe/src/tgllfg/core/: common.py  feats.py  pipeline.py
tlbe/src/tgllfg/docs/: __init__.py  grammar.py
tlbe/src/tgllfg/examples/: demo.py
tlbe/src/tgllfg/fstruct/: checks.py  equations.py  graph.py  unify.py
tlbe/src/tgllfg/lex/: __init__.py  adapter.py  import_csv.py  migrations.py  models.py  repo.py
tlbe/src/tgllfg/lmt/: check.py
tlbe/src/tgllfg/morph/: __init__.py  analyzer.py  loader.py  paradigms.py
tlbe/src/tgllfg/parse/: earley.py
tlbe/src/tgllfg/renderers/: text.py
tlbe/src/tgllfg/text/: multiword.py  quotes.py  tokenizer.py
tlbe/tests/tgllfg/: conftest.py  test_api_audit.py  test_api_auth.py  test_api_exemplars.py  test_api_lex.py  test_api_parse.py  test_api_scaffold.py  test_api_telemetry.py  test_approximators.py  test_atomic_unify.py  test_bench.py  test_cardinal_decimal_percent.py  test_cardinal_np_modifier.py  test_cardinal_predicative.py  test_control_phase4.py  test_dates.py  test_definitions_feats_sync.py  test_dem_on_relativized_head.py  test_demonstrative_possessive_phase4.py  test_distributive.py  test_dv_three_arg.py  test_equations.py  test_fractions.py  test_fu_evaluation.py  test_grammar_doc_sync.py  test_ipang_ika_applicatives.py  test_iv_multi_gen_under_control.py  test_lex_cache.py  test_lex_seed.py  test_lmt_embedded_check.py  test_lmt_oblique_classifier.py  test_lmt_principles.py  test_mang_retain.py  test_mga_approximation.py  test_migrations.py  test_morph.py  test_na_after_pron_disambig.py  test_nested_multi_arg_under_control.py  test_nonpivot_ay_fronting.py  test_numeric_comparatives.py  (+140 more)
tlbe/tests/tgllfg/data/: audit-baseline.jsonl  coverage_corpus.yaml  parses.baseline.pkl
tlfe/: .dockerignore  .gitignore  .prettierignore  README.md  eslint.config.js  index.html  openapi-ts.config.ts  package-lock.json  package.json  vite.config.ts
(+113 files in other folders)
