# pyproject.toml

[project]
name = "tgllfg"
dynamic = ["version"]
description = 'Prototype LFG parser for Tagalog'
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
keywords = []
authors = [
  { name = "Glenn Adams", email = "glenn@skynav.com" },
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Programming Language :: Python :: 3.13",
  "Topic :: Text Processing :: Linguistic",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: MIT License",
]
dependencies = [
  "pyyaml>=6.0",
]

[project.urls]
Documentation = "https://github.com/skynavga/tgllfg#readme"
Issues = "https://github.com/skynavga/tgllfg/issues"
Source = "https://github.com/skynavga/tgllfg"

[tool.hatch.version]
path = "src/tgllfg/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "hypothesis>=6.0",
  "mypy>=1.0.0",
  "pytest",
  "ruff",
  "types-pyyaml",
]

[tool.hatch.envs.default.scripts]
check = "ruff check . && mypy --install-types --non-interactive {args:src/tgllfg tests}"
demo = "python -m tgllfg.examples.demo"
lint = "ruff check ."
test = "pytest"
types = "mypy --install-types --non-interactive {args:src/tgllfg tests}"

[tool.coverage.run]
source_pkgs = ["tgllfg", "tests"]
branch = true
parallel = true
omit = [
  "src/tgllfg/__about__.py",
]

[tool.coverage.paths]
tgllfg = ["src/tgllfg"]
tests = ["tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
