# pyproject.toml

[project]
name = "tgllfg"
dynamic = ["version"]
description = 'Prototype LFG parser for Tagalog'
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
keywords = []
authors = [
  { name = "Glenn Adams", email = "glenn@skynav.com" },
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Programming Language :: Python :: 3.13",
  "Topic :: Text Processing :: Linguistic",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: MIT License",
]
dependencies = [
  "pyyaml>=6.0",
  "sqlalchemy[asyncio]>=2.0",
  "asyncpg>=0.29",
  "alembic>=1.13",
]

[project.scripts]
tgllfg = "tgllfg.cli:main"

[project.urls]
Documentation = "https://github.com/skynavga/tgllfg#readme"
Issues = "https://github.com/skynavga/tgllfg/issues"
Source = "https://github.com/skynavga/tgllfg"

[tool.hatch.version]
path = "src/tgllfg/__version__.py"

[tool.hatch.envs.default]
dependencies = [
  "hypothesis>=6.0",
  "mypy>=1.0.0",
  "pytest",
  "pytest-asyncio>=0.23",
  "pytest-xdist>=3.0",
  "ruff",
  "testcontainers[postgres]>=4.0",
  "types-pyyaml",
]

[tool.hatch.envs.default.scripts]
check = "ruff check . && mypy --install-types --non-interactive {args:src/tgllfg tests}"
demo = "python -m tgllfg.examples.demo"
lint = "ruff check ."
test = "(pytest -m postgres {args:} || [ $? = 5 ]) && pytest -m 'not postgres' -n auto {args:}"
test-postgres = "pytest -m postgres {args:}"
test-fast = "pytest -m 'not postgres' -n auto {args:}"
types = "mypy --install-types --non-interactive {args:src/tgllfg tests}"

[tool.coverage.run]
source_pkgs = ["tgllfg", "tests"]
branch = true
parallel = true
omit = [
  "src/tgllfg/__version__.py",
]

[tool.coverage.paths]
tgllfg = ["src/tgllfg"]
tests = ["tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
  "postgres: tests that require a running Docker daemon (Postgres 17 testcontainer)",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
