# Copyright (c) 2025-2026 G & R Associates LLC
# SPDX-License-Identifier: MIT OR Apache-2.0

# pyproject.toml

[project]
name = "tgllfg"
dynamic = ["version"]
description = 'Prototype LFG parser for Tagalog'
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT OR Apache-2.0" }
keywords = []
authors = [
  { name = "Glenn Adams", email = "glenn@skynav.com" },
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Programming Language :: Python :: 3.13",
  "Topic :: Text Processing :: Linguistic",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: MIT License",
  "License :: OSI Approved :: Apache Software License",
]
dependencies = [
  "pyyaml>=6.0",
  "sqlalchemy[asyncio]>=2.0",
  "asyncpg>=0.29",
  "alembic>=1.13",
  "fastapi>=0.136.3",
  "uvicorn[standard]>=0.49.0",
  "pydantic-settings>=2.14.1",
  "httpx2>=2.3.0",
  "structlog>=26.1.0",
  "opentelemetry-sdk>=1.42.1",
  "opentelemetry-exporter-otlp-proto-grpc>=1.42.1",
  "opentelemetry-instrumentation-fastapi>=0.63b1",
  "opentelemetry-instrumentation-sqlalchemy>=0.63b1",
  "pyjwt[crypto]>=2.13.0",
]

[project.scripts]
tgllfg = "tgllfg.cli:main"

[project.urls]
Documentation = "https://github.com/skynavga/tgllfg#readme"
Issues = "https://github.com/skynavga/tgllfg/issues"
Source = "https://github.com/skynavga/tgllfg"

[tool.hatch.version]
path = "src/tgllfg/__version__.py"

# Dev dependencies (Phase 12.C: migrated env/deps from hatch envs to uv).
# Installed by ``uv sync`` (pins captured in ``uv.lock``).
[dependency-groups]
dev = [
  "hypothesis>=6.0",
  "mypy>=1.0.0",
  "pytest",
  "pytest-asyncio>=0.23",
  "pytest-xdist>=3.0",
  "ruff",
  "testcontainers[postgres]>=4.0",
  "types-pyyaml",
  "poethepoet>=0.24",
  "pyright>=1.1",
  "yamllint>=1.35",
]

# Task runner (poethepoet); run via ``uv run poe <task>`` from tlbe/.
# Phase 12.C replaced the hatch env scripts; hatchling stays the build
# backend. Simple tasks append extra CLI args; shell tasks carry the
# &&/&/wait idioms the gate scripts need.
[tool.poe.tasks]
lint = "ruff check ."
types = "mypy src/tgllfg tests"
pyright = "pyright"
yaml = "yamllint data/tgl"
demo = "python -m tgllfg.examples.demo"
test-fast = "pytest -m 'not postgres and not slow and not xslow' -n auto"
test-slow = "pytest -m 'slow and not xslow' -n auto"
test-xslow = "pytest -m 'xslow' -n auto"
test-postgres = "pytest -m postgres"
bench = "tgllfg bench --check"

[tool.poe.tasks.check]
shell = "ruff check . && mypy src/tgllfg tests && pyright && yamllint data/tgl"

[tool.poe.tasks.test]
shell = "(pytest -m postgres || [ $? = 5 ]) && pytest -m 'not postgres and not xslow' -n auto"

[tool.poe.tasks.test-both]
shell = "pytest -m 'not postgres and not slow and not xslow' -n auto & p1=$!; pytest -m 'slow and not xslow' -n auto & p2=$!; wait $p1; r1=$?; wait $p2; r2=$?; [ $r1 -eq 0 ] && [ $r2 -eq 0 ]"

[tool.coverage.run]
source_pkgs = ["tgllfg", "tests"]
branch = true
parallel = true
omit = [
  "src/tgllfg/__version__.py",
]

[tool.coverage.paths]
tgllfg = ["src/tgllfg"]
tests = ["tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.mypy]
# Check the bodies of functions even when they lack a return annotation,
# silencing the noisy ``[annotation-unchecked]`` notes from untyped pytest
# fixtures / test helpers. Type errors that surface in those bodies are
# expected to be addressed at the call site or via narrow inline annotations.
check_untyped_defs = true

[tool.pyright]
# Pyright type-check config (CI gate; complements mypy). venvPath/venv
# point at the uv-managed .venv so imports resolve whether run via
# `uv run pyright` or `uvx pyright`.
include = ["src/tgllfg", "tests"]
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
asyncio_mode = "auto"
# Restrict collection to the canonical test tree. The gitignored
# project-local ./tmp/ directory (see feedback_use_project_tmp)
# contains historical probe scripts that may name themselves
# test_*.py for their internal pytest-style assertions — those
# are not part of the test suite and must not be auto-collected.
testpaths = ["tests"]
markers = [
  "postgres: tests that require a running Docker daemon (Postgres 17 testcontainer)",
  "slow: tests with single-test call duration >= 5s (T2 bucket; excluded from test-fast)",
  "xslow: tests with single-test call duration > 60s (excluded from test-fast/test-slow/test-both; run on demand via test-xslow)",
  "references: end-to-end tests that read the gitignored data/tgl/references/ corpus; auto-skipped when it is absent (CI / fresh clone)",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
